--- a/index.html
+++ b/index.html
@@ -1,32 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Text RPG</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        #game {
-            max-width: 600px;
-            margin: auto;
-            text-align: center;
-        }
-        button {
-            margin: 5px;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Murders of Grubennstein</title>
+    <link rel="stylesheet" href="fantasy_border2.css">
 </head>
 <body>
-    <div id="game">
-        <h1>Murders of Grubennstein</h1>
-        <p id="message"></p>
-        <div id="buttons"></div>
+    <div id="game-container">
+        <div id="game"></div>
     </div>
-
-    <script src="rpg_game.js"></script>
+    <script src="rpg_game2.js"></script>
 </body>
 </html>
