--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div id="game-container">
         <div id="game"></div>
     </div>
-    <script src="rpg_game2.js"></script>
+    <script src="rpg_game.js"></script>
 </body>
 </html>
